Small Fixes and Emoji Addition
Fixed gallery button inconsistency between safari and firefox.
Fixed misaligned text in the contacts page.
Cleared out the rest of light-dark functions out of the database excluding for the utilities file.
Fixed left nav drawer to but height accurate with a parametric feature to adjust it.
Added emojis beside headers and a toggle to turn it on and off.

--- a/css/about.css
+++ b/css/about.css
@@ -15,13 +15,18 @@
 #abouSect .card {
     padding-inline: 1.5rem;
     padding-block: 2rem;
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
 }
 
 #abouSect .card > :first-child {
-    margin-top: 0;
+    margin-top: 0 !important;
 }
 
-#abouSect h2 {
-    margin: 0;
-    padding-block: 1rem;
+#abouSect h5 {
+    /* margin: 0; */
+    /* padding-block: 1rem; */
 }
