--- a/css/home.css
+++ b/css/home.css
@@ -40,11 +40,15 @@
 }
 
 #homeSect h2{
+    font-family: Erode-SemiBold, var(--d_fonts);
+
     font-size: 2rem;
     margin-bottom: 0em;
 }
 
 #homeSect h3{
+    font-family: Erode-Medium, var(--d_fonts);
+
     display: inline-block;
     font-size: 1.5rem;
     margin: 0;
