--- a/css/style.css
+++ b/css/style.css
@@ -116,11 +116,13 @@
     }
 }
 #nav-drawer {
+    /* --padding-block: 56px; */
+    --padding-block: 3.5rem;
     /* width: 0px; */
     width: fit-content;
-    height: 100dvh;
+    height: calc(100dvh - 2 * var(--padding-block));
     padding-inline: 0px;
-    padding-block: 56px;
+    padding-block: var(--padding-block);
 
     position: fixed;
     left: -100%;
@@ -146,7 +148,7 @@
     padding-inline: 42px;
 }
 
-#nav-drawer > label, #nav-drawer > *:not(#mode) label {
+#nav-drawer > label, #nav-drawer > *:not(#mode):not(#emoji-mode) label {
     height: calc(var(--h) - var(--p_t));
     padding-inline: 8px;
     padding-top: var(--p_t);
@@ -167,7 +169,7 @@
 #nav-drawer label:hover {
     cursor: pointer;
 }
-#nav-drawer > *:not(#mode) + label:hover, #sub-nav-drawer label:hover {
+#nav-drawer > *:not(#mode):not(#emoji-mode) + label:hover, #sub-nav-drawer label:hover {
     /* background-color: var(--g4); */
     background-color: rgba(var(--nd_2), 0.3);
 }
@@ -289,7 +291,7 @@
 #nav-drawer #mode {
     position: absolute;
     left: 1rem;
-    bottom: 8rem;
+    bottom: 1rem;
 
     height: 2rem;
     width: 6rem;
@@ -347,6 +349,64 @@
 /* :root:has(#nav-drawer #mode #system-mode:checked) {color-scheme: normal;} */
 :root:has(#nav-drawer #mode  #light-mode:checked) {color-scheme: light;}
 :root:has(#nav-drawer #mode   #dark-mode:checked) {color-scheme: dark;}
+
+#nav-drawer #emoji-mode {
+    position: absolute;
+    right: 1rem;
+    bottom: 1rem;
+
+    height: 2rem;
+    width: 2rem;
+
+    border-radius: 0.8rem;
+    border-width: 2px;
+    border-color: gray;
+    border-style: solid;
+    box-shadow: 0px 0px 8px gray;
+
+    /* display: flex; */
+
+    background-color: lightgray;
+}
+#nav-drawer #emoji-mode label {
+    height: 2rem;
+    width: 2rem;
+
+    padding: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#nav-drawer #emoji-mode::before {
+    position: absolute;
+
+    margin: 0.15rem;
+
+    width: calc(1.7rem - 2px * 2);
+    height: calc(1.7rem - 2px * 2);
+
+    border-radius: 0.5rem;
+    border-width: 2px;
+    border-color: gray;
+    border-style: solid;
+    box-shadow: 0px 0px 8px gray;
+
+    display: block;
+    opacity: 0;
+
+    background-color: rgba(255, 255, 255, 0.175);
+    content: '';
+    pointer-events: none;
+    transition: opacity 0.25s ease-in-out;
+}
+#nav-drawer #emoji-mode:has(#emoji-toggle:checked)::before { opacity: 1; }
+:root:has(#nav-drawer #emoji-mode #emoji-toggle:checked) {
+    --emoji_display: inline;
+}
+:root:has(#nav-drawer #emoji-mode #emoji-toggle:not(:checked)) {
+    --emoji_display: none;
+}
 
 #nav-bar {
     height: 32px;
@@ -447,7 +507,11 @@
     width: 100%;
 }
 
-
+.emoji {
+    white-space-collapse: preserve;
+    /* display: inline !important; */
+    display: var(--emoji_display) !important;
+}
 
 .dropShadow {
     box-shadow: 0px 0px 8px gray;
@@ -459,12 +523,13 @@
     pointer-events: none;
 }
 .card {
-    background-color: var(--a);
+    /* background-color: var(--a); */
+    background-color: transparent;
     border-radius: 8px;
     border-style: solid;
-    border-color: light-dark(var(--g4), var(--g2));
-    border-width: 3px;
-    box-shadow: 0px 0px 16px light-dark(var(--g2), var(--g4));
+    border-color: var(--s4);
+    border-width: 1px;
+    box-shadow: 0px 0px 16px var(--s2);
 }
 
 .link-card {
@@ -480,7 +545,6 @@
 }
 
 #footSect {
-    /* background-color: light-dark(var(--g2), var(--g4)); */
     background-color: var(--pa);
 }
 
